# asd-def

./: .gitignore  CHANGELOG.md  pyproject.toml
.github/workflows/: docs.yml
docs/: poly.py
docs/_polyversion/templates/: index.html  switcher.json
docs/source/: conf.py  glossary.md  index.md  references.bib
docs/source/_figures/: attribution_age_at_diagnosis.json  attribution_era.json  attribution_movers_age_at_diagnosis.json  attribution_movers_era.json  category_decomposition.json  demographic_conditioning.json  dense_features.json  displacement_atlas.json  invariance_process_age_at_diagnosis.json  invariance_process_era.json  local_directional_age_at_diagnosis.json  local_directional_era.json  local_panels_age_at_diagnosis.json  local_plane_age_at_diagnosis.json  local_plane_era.json  local_specificity.json  prevalence_age_at_diagnosis.json  prevalence_era.json  prevalence_stacked_age_at_diagnosis.json  prevalence_stacked_era.json  prevalence_stacked_pair.json  referent_decomposition.json  replication.json  reproduction.json  roughness.json  selection_criteria.json  stability.json  stratum_size.json  subset_comparison.json  trajectory_age_at_diagnosis.json  trajectory_era.json
docs/source/_static/: custom.css
docs/source/_templates/autosummary/: class.rst
manuscript/: references.bib
reports/brief/: main.tex  references.bib
reports/brief/figures/: atlas.json  atlas.pgf  category_heatmaps.json  category_heatmaps.pgf  specificity.json  specificity.pgf  trajectory_overlay.json  trajectory_overlay.pgf
